# ifem-radar-v2

./: .env.prod.example  .gitignore  Cargo.toml  Dockerfile  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  setup.sh  survey.sql
.sqlx/: query-0155a94f393a51aac58c0bfb2a9fc38015963083d3266f4873fb2b657e1a5634.json  query-095dd93bee6eb87e9ca749dc8dfb9a8945fbe75a725e78f24aa7867d3bbab264.json
backend/: Cargo.toml  Dockerfile  docker-compose.yml  readme.md  survey.sql
backend/docs/: connect.md
backend/scripts/: api.http  api_tests.rs  create_account.rs  reset_local.sh
backend/src/: database.rs  main.rs  models.rs
backend/tests/: api_flow.rs  deploy_smoke.sh
dev/: main.py
doc/: auth.md  connect.md
docs/: auth.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/pages/: CreateSurveyPage.tsx  LoginPage.tsx  SurveyDetailPage.tsx  SurveyListPage.tsx
migrations/: 20260216000000_create_account_info.sql  20260313000000_add_survey_photos.sql
scripts/: api.http  api_tests.rs  reset_local.sh  run_smoke_test.sh
src/: auth.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs  storage.rs
tests/: api.http  api_flow.rs  api_flow.sh  api_tests.rs  deploy_smoke.rs  smoke_test.rs
