[workspace]
resolver = "2"
members = ["."]

[package]
name = "ifem-radar-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4.34", features = ["clock", "serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "1.1"
aws-sdk-s3 = "1.14"
anyhow = "1.0"
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
argon2 = "0.5"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }

[features]
integration = []

[[bin]]
name = "create_account"
path = "scripts/create_account.rs"
